created toggle switch

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,6 +14,12 @@
     <title>Frontend Mentor | Frontend quiz app</title>
   </head>
   <body>
+    <div class="theme-toggle">
+      <label class="switch">
+        <input type="checkbox" />
+        <span class="slider round"></span>
+      </label>
+    </div>
     <!-- Quiz menu start -->
 
     Welcome to the Frontend Quiz! Pick a subject to get started. HTML CSS
