--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,10 +15,12 @@
   </head>
   <body>
     <div class="theme-toggle">
+      <img class="toggle-img" src="assets/images/icon-sun-dark.svg" alt="" />
       <label class="switch">
         <input type="checkbox" />
         <span class="slider round"></span>
       </label>
+      <img class="toggle-img" src="assets/images/icon-moon-dark.svg" alt="" />
     </div>
     <!-- Quiz menu start -->
 
