--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,17 +15,19 @@
   </head>
   <body>
     <div class="theme-toggle">
-      <img class="toggle-img" src="assets/images/icon-sun-dark.svg" alt="" />
+      <img class="toggle-img" src="assets/images/icon-sun-light.svg" alt="" />
       <label class="switch">
-        <input type="checkbox" />
+        <input type="checkbox" checked />
         <span class="slider round"></span>
       </label>
-      <img class="toggle-img" src="assets/images/icon-moon-dark.svg" alt="" />
+      <img class="toggle-img" src="assets/images/icon-moon-light.svg" alt="" />
     </div>
     <!-- Quiz menu start -->
-
-    Welcome to the Frontend Quiz! Pick a subject to get started. HTML CSS
-    JavaScript Accessibility
+    <h1>
+      Welcome to the <br /><span class="heading-bold">Frontend Quiz!</span>
+    </h1>
+    <h2>Pick a subject to get started.</h2>
+    HTML CSS JavaScript Accessibility
 
     <!-- Quiz menu end -->
 
