--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -80,49 +80,85 @@
         </button>
       </div>
     </main>
-    <!-- Quiz menu end -->
-
-    <!-- number -->
-    <!-- of 10 A B C D -->
-
-    <!-- Quiz completed start -->
-
-    <!-- Quiz completed You scored... -->
-
-    <!-- score -->
-    <!-- out of 10 -->
-
-    <!-- Quiz completed end -->
     <!-- Quiz question start -->
     <section class="container" id="quiz">
       <div>
-        <h2>Question 1 of 10</h2>
-        <h3>Question</h3>
+        <h2 id="questionNumber">Question 1 of 10</h2>
+        <h3 id="question">Question</h3>
       </div>
       <div class="quiz-subjects">
-        <button class="btn">
-          <span class="quiz-icons grey">A</span>
-          <span id="option-one">HTML</span>
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">A</span>
+            <span id="option-1">HTML</span>
+          </div>
         </button>
-        <button class="btn">
-          <span class="quiz-icons grey">B</span>
-          <span id="option-two">CSS</span>
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">B</span>
+            <span id="option-2">CSS</span>
+          </div>
         </button>
-        <button class="btn">
-          <span class="quiz-icons grey">C</span>
-
-          <span id="option-three">JavaScript</span>
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">C</span>
+            <span id="option-3">JavaScript</span>
+          </div>
         </button>
-        <button class="btn">
-          <span class="quiz-icons grey">D</span>
-
-          <span id="option-four">Accessibility</span>
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">D</span>
+            <span id="option-4">Accessibility</span>
+          </div>
         </button>
-        <button class="btn btn-answer">Submit answer</button>
+        <button class="btn btn-answer" id="submitAnswer">Submit answer</button>
+        <div class="error-status" id="error">
+          <div class="flex-center">
+            <img src="assets/images/icon-error.svg" alt="" />
+            <p id="error-msg"></p>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Quiz question end -->
-
+    <section class="container" id="quiz">
+      <div>
+        <h2 id="result-title">Quiz completed</h2>
+      </div>
+      <div class="quiz-subjects">
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">A</span>
+            <span id="option-1">HTML</span>
+          </div>
+        </button>
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">B</span>
+            <span id="option-2">CSS</span>
+          </div>
+        </button>
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">C</span>
+            <span id="option-3">JavaScript</span>
+          </div>
+        </button>
+        <button class="btn answer-state">
+          <div class="option-btn">
+            <span class="quiz-icons grey">D</span>
+            <span id="option-4">Accessibility</span>
+          </div>
+        </button>
+        <button class="btn btn-answer" id="submitAnswer">Submit answer</button>
+        <div class="error-status" id="error">
+          <div class="flex-center">
+            <img src="assets/images/icon-error.svg" alt="" />
+            <p id="error-msg"></p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="index.js"></script>
   </body>
 </html>
